k8s/overlays/prod/prod-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: auth-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: wallet-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: transaction-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: notification-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: frontend
