k8s/overlays/prod/prod-probe-delays-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          livenessProbe:
            initialDelaySeconds: 45
          readinessProbe:
            initialDelaySeconds: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: auth-service
          livenessProbe:
            initialDelaySeconds: 60
          readinessProbe:
            initialDelaySeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: wallet-service
          livenessProbe:
            initialDelaySeconds: 60
          readinessProbe:
            initialDelaySeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: transaction-service
          livenessProbe:
            initialDelaySeconds: 60
          readinessProbe:
            initialDelaySeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: notification-service
          livenessProbe:
            initialDelaySeconds: 60
            timeoutSeconds: 3
          readinessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 3
            failureThreshold: 6
